# ml_ops_labs

./: README.md
ml_ops_labs/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-local.yaml  pyproject.toml  run_servers.sh
ml_ops_labs/ml-api-client/: README.md  pyproject.toml
ml_ops_labs/src/ml_ops_labs/: __init__.py  __main__.py  config.py  log.py  main.py
ml_ops_labs/src/ml_ops_labs/clients/: ml_api.py
ml_ops_labs/src/ml_ops_labs/db/: logs.py  tools.py
ml_ops_labs/src/ml_ops_labs/ml_api/: __init__.py  __main__.py
ml_ops_labs/src/ml_ops_labs/ml_api/usecases/: predict.py
ml_ops_labs/src/ml_ops_labs/ml_api/web/: __init__.py  application.py  lifetime.py  middleware.py
ml_ops_labs/src/ml_ops_labs/ml_api/web/api/: __init__.py  routes.py
ml_ops_labs/src/ml_ops_labs/ml_api/web/api/cats_dogs/: __init__.py  model.py  schema.py  views.py
ml_ops_labs/src/ml_ops_labs/ml_api/web/api/echo/: __init__.py  views.py
ml_ops_labs/src/ml_ops_labs/ml_api/web/api/monitoring/: __init__.py  views.py
ml_ops_labs/src/ml_ops_labs/ml_models/: cats_dogs.py
ml_ops_labs/src/ml_ops_labs/ml_models/models/: __init__.py
ml_ops_labs/src/ml_ops_labs/web_view/: index.py
