[project]
name = "ml-ops-labs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dima Kalinin", email = "dimdimi4andfixiki@gmail.com" }
]
dependencies = [
    "streamlit>=1.40.1",
    "keras>=3.5.0",
    "loguru>=0.7.2",
    "tensorflow>=2.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "poethepoet>=0.30.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_ops_labs"]

[tool.poe.tasks]
web-view = "streamlit run src/ml_ops_labs/web_view/index.py"
